--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,10 @@
         <span class="label">Seconds</span>
       </div>
     </div>
+
+    <div class="controls" id="controls-1">
+      <button class="button" data-action="start">Start</button>
+      <button class="button" data-action="stop">Stop</button>
+    </div>
   </body>
 </html>
